--- a/deep_nn_traffic_sign_classifier.ipynb
+++ b/deep_nn_traffic_sign_classifier.ipynb
@@ -18,6 +18,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!mkdir traffic-sign-data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": false
@@ -45,8 +56,6 @@
    "source": [
     "# Load pickled data\n",
     "import pickle\n",
-    "\n",
-    "# TODO: Fill this in based on where you saved the training and testing data\n",
     "\n",
     "training_file = 'traffic-sign-data/train.p'\n",
     "testing_file = 'traffic-sign-data/test.p'\n",
